package pprog.interfaces;

import pprog.domain.GreenSpace;

import java.util.List;

public interface SortingAlgorithm {

    void sort(List<GreenSpace> managedGreenSpacesList);

}
